--- a/FRifugioBlog/wwwroot/index.html
+++ b/FRifugioBlog/wwwroot/index.html
@@ -36,6 +36,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-core.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/plugins/autoloader/prism-autoloader.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
+
+    <script src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+
 </body>
 
 </html>
