Fix manifest path

--- a/FRifugioBlog/wwwroot/index.html
+++ b/FRifugioBlog/wwwroot/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/plugins/line-numbers/prism-line-numbers.min.css" integrity="sha512-cbQXwDFK7lj2Fqfkuxbo5iD1dSbLlJGXGpfTDqbggqjHJeyzx88I3rfwjS38WJag/ihH7lzuGlGHpDBymLirZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/prism-vs-theme.min.css" rel="stylesheet" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" sizes="512x512" href="assets/icons/icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/icons/icon-192.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180.png" />
